@@ -16,6 +16,7 @@ Version 1.1.8 work in progress
 - Enh #2273: Used better merging algorithm to build query parameters that are of array type in CUrlManager (Qiang)
 - Enh #2299: Added CAssetManager.newFileMode and newDirMode (Qiang)
 - Enh: Added CHttpSession::regenerateID() and improved CWebUser::changeIdentity() by regenerating session ID (Qiang)
+- Enh: Added CActiveRecord::saveCounters() (Qiang)
 - Chg: Upgraded jQuery to 1.5.2 (Qiang)
 
 Version 1.1.7 March 27, 2011
